# ChangeLog for dev-lang/swi-prolog
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.273 2011/04/19 07:58:54 keri Exp $

  19 Apr 2011; <keri@gentoo.org> -swi-prolog-5.11.12.ebuild,
  -swi-prolog-5.11.13.ebuild, -swi-prolog-5.11.14.ebuild,
  -swi-prolog-5.11.15.ebuild, -swi-prolog-5.11.16.ebuild:
  Remove old development versions

*swi-prolog-5.10.4 (30 Mar 2011)

  30 Mar 2011; <keri@gentoo.org> +swi-prolog-5.10.4.ebuild:
  Version bump

*swi-prolog-5.10.3 (25 Mar 2011)

  25 Mar 2011; <keri@gentoo.org> +swi-prolog-5.10.3.ebuild:
  Version bump

*swi-prolog-5.11.18 (25 Mar 2011)

  25 Mar 2011; <keri@gentoo.org> +swi-prolog-5.11.18.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.17 (17 Mar 2011)

  17 Mar 2011; <keri@gentoo.org> +swi-prolog-5.11.17.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.16 (17 Mar 2011)

  17 Mar 2011; <keri@gentoo.org> +swi-prolog-5.11.16.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.15 (23 Feb 2011)

  23 Feb 2011; <keri@gentoo.org> +swi-prolog-5.11.15.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.14 (21 Feb 2011)

  21 Feb 2011; <keri@gentoo.org> +swi-prolog-5.11.14.ebuild:
  Bump -5.11 development version

  12 Feb 2011; <keri@gentoo.org> -swi-prolog-5.10.0-r1.ebuild,
  -swi-prolog-5.10.1.ebuild, -swi-prolog-5.11.9.ebuild,
  -swi-prolog-5.11.10.ebuild, -swi-prolog-5.11.11.ebuild:
  Remove old versions

  12 Feb 2011; Raúl Porcel <armin76@gentoo.org> swi-prolog-5.10.2.ebuild:
  alpha/sparc stable wrt #350116

*swi-prolog-5.11.13 (24 Jan 2011)

  24 Jan 2011; <keri@gentoo.org> +swi-prolog-5.11.13.ebuild:
  Bump -5.11 development version

*swi-prolog-5.11.12 (21 Jan 2011)

  21 Jan 2011; <keri@gentoo.org> +swi-prolog-5.11.12.ebuild:
  Bump -5.11 development version

  21 Jan 2011; <keri@gentoo.org> -swi-prolog-5.11.0.ebuild,
  -swi-prolog-5.11.1.ebuild, -swi-prolog-5.11.2.ebuild,