@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/swi-prolog
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.273 2011/04/19 07:58:54 keri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/swi-prolog/ChangeLog,v 1.274 2011/04/19 08:10:42 keri Exp $
+
+*swi-prolog-5.11.19 (19 Apr 2011)
+
+  19 Apr 2011; <keri@gentoo.org> +swi-prolog-5.11.19.ebuild:
+  Bump -5.11 development version
 
   19 Apr 2011; <keri@gentoo.org> -swi-prolog-5.11.12.ebuild,
   -swi-prolog-5.11.13.ebuild, -swi-prolog-5.11.14.ebuild,
